--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -854,14 +854,39 @@
 				display: flex;
 				flex: 1 1 50%;
 				flex-wrap: nowrap;
+				line-height: 1em;
 
+				// grouper cases (filter)
+				&.grouper {
+					flex-wrap: wrap;
+					padding-bottom: 0.25em;
 
-				>label {
-					padding-left: 0.25em;
-					//padding-right: 0.5em;
+					>li {
+						padding: 0.25em;
+						padding-left: 1em;
+						width: 100%;
+					}
+
+					>.grouper_label {
+				    	width: 100%;
+				    	padding-top: 0.25em;
+				    	padding-bottom: 0.25em;
+				    	opacity: 0.7;
+				    	font-size: 0.80em;
+					}
+
+					input {
+						vertical-align: text-top;
+					}
 				}
 
-				>input {
+				label {
+					//padding-left: 0.15em;
+					//padding-right: 0.5em;
+					//vertical-align: baseline;
+				}
+
+				input {
 					margin-right: 0.5em;
 				}
 
@@ -875,6 +900,7 @@
 
 			&.inputs_container >li {
 				flex: 1 1 100%;
+				padding-bottom: 0.25em;
 			}
 		}
 	}
@@ -1025,58 +1051,59 @@
 
 
 
+
 	/*
-	.tooltip_toggle {
-	  cursor: pointer;
-	  position: relative;
-	  z-index: 9999999999999999999;
-	}
+		.tooltip_toggle {
+		  cursor: pointer;
+		  position: relative;
+		  z-index: 9999999999999999999;
+		}
 
-	.tooltip_toggle::before {
-	  position: absolute;
-	  top: -80px;
-	  left: -80px;
-	  background-color: green;
-	  border-radius: 5px;
-	  color: #fff;
-	  content: attr(data-tooltip);
-	  padding: 1rem;
-	  text-transform: none;
-	  -webkit-transition: all 0.5s ease;
-	  transition: all 0.5s ease;
-	  width: 15em;
-	}
+		.tooltip_toggle::before {
+		  position: absolute;
+		  top: -80px;
+		  left: -80px;
+		  background-color: green;
+		  border-radius: 5px;
+		  color: #fff;
+		  content: attr(data-tooltip);
+		  padding: 1rem;
+		  text-transform: none;
+		  -webkit-transition: all 0.5s ease;
+		  transition: all 0.5s ease;
+		  width: 15em;
+		}
 
-	.tooltip_toggle::after {
-	  position: absolute;
-	  top: -12px;
-	  left: 9px;
-	  border-left: 5px solid transparent;
-	  border-right: 5px solid transparent;
-	  border-top: 5px solid green;
-	  content: " ";
-	  font-size: 0;
-	  line-height: 0;
-	  margin-left: -5px;
-	  width: 0;
-	}
+		.tooltip_toggle::after {
+		  position: absolute;
+		  top: -12px;
+		  left: 9px;
+		  border-left: 5px solid transparent;
+		  border-right: 5px solid transparent;
+		  border-top: 5px solid green;
+		  content: " ";
+		  font-size: 0;
+		  line-height: 0;
+		  margin-left: -5px;
+		  width: 0;
+		}
 
-	.tooltip_toggle::before,
-	.tooltip_toggle::after {
-	  color: #efefef;
-	  font-family: monospace;
-	  font-size: 16px;
-	  opacity: 0;
-	  pointer-events: none;
-	  text-align: center;
-	}
+		.tooltip_toggle::before,
+		.tooltip_toggle::after {
+		  color: #efefef;
+		  font-family: monospace;
+		  font-size: 16px;
+		  opacity: 0;
+		  pointer-events: none;
+		  text-align: center;
+		}
 
-	.tooltip_toggle:hover::before,
-	.tooltip_toggle:hover::after {
-	  opacity: 1;
-	  -webkit-transition: all 0.75s ease;
-	  transition: all 0.75s ease;
-	}
-	*/
+		.tooltip_toggle:hover::before,
+		.tooltip_toggle:hover::after {
+		  opacity: 1;
+		  -webkit-transition: all 0.75s ease;
+		  transition: all 0.75s ease;
+		}
+		*/
 
 
