--- a/lib/dedalo/page/css/layout/paginator.less
+++ b/lib/dedalo/page/css/layout/paginator.less
@@ -11,37 +11,37 @@
 		padding: 0.5em;
 
 			// ICONS BOOTSTRAP
-			.icon_bs {
-				display: inline-block;
-				width: 14px;
-				height: 14px;
-				line-height: 14px;
-				//vertical-align: text-top;
-				vertical-align: text-top;
-				//background-image: url("../../themes/default/glyphicons-halflings.png");
-				background-image: url("../../themes/default/svg_icons.svg");
-				background-position: -48px -24px;
-				background-size: 474px 184px;
-				background-repeat: no-repeat;
-				list-style: none;
-				position: relative;
-				/*top: -1px;*/
-				cursor: pointer;
-				opacity: 1;
-				//zoom: 1.25;
+			// .icon_bs {
+			// 	display: inline-block;
+			// 	width: 14px;
+			// 	height: 14px;
+			// 	line-height: 14px;
+			// 	//vertical-align: text-top;
+			// 	vertical-align: text-top;
+			// 	//background-image: url("../../themes/default/glyphicons-halflings.png");
+			// 	background-image: url("../../themes/default/svg_icons.svg");
+			// 	background-position: -48px -24px;
+			// 	background-size: 474px 184px;
+			// 	background-repeat: no-repeat;
+			// 	list-style: none;
+			// 	position: relative;
+			// 	/*top: -1px;*/
+			// 	cursor: pointer;
+			// 	opacity: 1;
+			// 	//zoom: 1.25;
 
-				&:hover {
-					opacity: 1
-				}
-				&:active {
-					opacity: 0.4
-				}
+			// 	&:hover {
+			// 		opacity: 1
+			// 	}
+			// 	&:active {
+			// 		opacity: 0.4
+			// 	}
 
-				&.unactive {
-					opacity: 0.4;
-					cursor: default;
-				}
-			}
+			// 	&.unactive {
+			// 		opacity: 0.4;
+			// 		cursor: default;
+			// 	}
+			// }
 
 		}//end .css_wrap_rows_paginator
 		.inspector_div .css_wrap_rows_paginator {
@@ -71,17 +71,15 @@
 		}
 
 		.css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_info {
-			display: inline-block;
-			padding: 1px;
-			line-height: 1.2em;
+			display: inline;
+			line-height: 1.5em;
 		}
 		#wrap_inspector_paginator .css_rows_paginator_info {
 			padding-top: 10px;
 		}
 		.css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_div_links {
-			display: inline-block;
-			float: none;
-			vertical-align: middle;
+			display: inline;
+			vertical-align: bottom;
 			}
 			.css_rows_paginator_div_links a {
 				margin-left: 5px;
@@ -106,7 +104,7 @@
 			display: flex;
 
 			button {
-				//background-color: transparent;
+				background-color: transparent;
 				background-size: 100%;
 				background-repeat: no-repeat;
 				background-position: center;
@@ -115,6 +113,11 @@
 				padding: 1em;
 				cursor: pointer;
 				margin-right: 0.35em;
+				user-select: none;
+
+				&:active {
+					opacity: 0.2;
+				}
 			}
 
 			//.element-color(@color) {
@@ -122,7 +125,9 @@
   			//}
 
 			.paginator_first_icon {
-				background-image: url('../../themes/default/icons/backward.svg');
+				//background-image: url('../../themes/default/icons/backward.svg');
+				background-image: url('../../themes/default/icons/forward.svg');
+				transform: scaleX(-1);
 				background-size: 80%;
 			}
 
@@ -145,7 +150,6 @@
 				opacity: 0.1 !important;
 			}
 		}
-
 
 
 
