--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<link href="<?php echo DEDALO_LIB_BASE_URL ?>/page/css/main.css" rel="stylesheet">
-	<link href="<?php echo DEDALO_LIB_BASE_URL ?>/common/css/structure.css" rel="stylesheet">
+	<?php/*<link href="<?php echo DEDALO_LIB_BASE_URL ?>/common/css/structure.css" rel="stylesheet">*/ ?>
 </head>
 <body>
 	<?php echo $html_header ?>
