--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -519,6 +519,16 @@
 
 		&.edit {
 
+			&.component_image {
+
+				img {
+					padding: 0;
+					height: 100%;
+					max-height: 10em;
+					width: auto;
+				}
+			}
+
 		}//end &.edit
 
 
