--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -56,6 +56,10 @@
 		margin: 0;
 		padding: 0;
 
+		>* {
+			border-bottom: 1px solid #eeeeee;
+		}
+
 		//padding-top: 0.5em;
 		//padding-bottom: 0.5em;
 
