Add support and fixes for check duplicate values (component_input_text)

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -60,7 +60,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		flex: 0 1 50%; // <'flex-grow'> <'flex-shrink'>? || <'flex-basis'>
-		//flex-grow: initial;
+		align-content: flex-start; // maintain items flow from top to bottom
 		//flex: 0 1 auto;
 	}
 
