--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -90,10 +90,11 @@ html {
 	}
 // debug
 	.debug {
-		display:grid;
-		grid-template-columns: 40% 1fr auto;
-		background-color:#f1f2f3;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		background-color: #f1f2f3;
 		padding: 1em;
+		overflow: auto;
 
 		.total_time {
 			position: fixed;
