Add calendar ico so it can be used in component_date

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -851,6 +851,13 @@
 					content: @fa-var-link;
 				}
 			}
+			&.calendar {
+				.fa-icon;
+				.fas;
+				&:before {
+					content: @fa-var-calendar;
+				}
+			}
 		}//end .active &, &.link
 	}//end .button
 
