Add tool_lang automatic translation

--- a/lib/dedalo/tools/tool_lang/css/tool_lang.less
+++ b/lib/dedalo/tools/tool_lang/css/tool_lang.less
@@ -1,5 +1,15 @@
 
 
+
+// select style
+	.select_style {
+		width: fit-content;
+		height: 2em;
+		font-size: 0.80em;
+	}
+
+
+
 // components_container
 	.components_container {
 		display: grid;
@@ -8,12 +18,42 @@
 	    //background-color: #D6F737;
 
 	    >select {
-			width: fit-content;
-			height: 2em;
-			font-size: 0.80em;
+			.select_style;
 	    }
 
 	    >div {
 
 	    }
+	}
+
+
+
+// buttons_container
+	.buttons_container {
+		padding-top: 1em;
+		padding-bottom: 1em;
+	}
+
+
+
+// automatic_translation_container
+	.automatic_translation_container {
+		position: relative;
+
+		>button {
+			.select_style;
+			// font-size: .9em;
+			// background-color: #a6a6a6;
+			// border-radius: 0.30em;
+			// cursor: pointer;
+			// color: #ffff;
+			// border: none;
+			// padding-left: 0.75em;
+			// padding-right: 0.75em;
+		}
+
+		>select {
+			margin-left: 0.5em;
+			.select_style;
+		}
 	}
