--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -29,6 +29,8 @@
 // components
 	@component_prefix : "component_";
 	@component_sufix  : "";
+
+	@import "../../@{component_prefix}geolocation/css/@{component_prefix}geolocation@{component_sufix}.less";
 	/*
 	@import "../../@{component_prefix}input_text/css/@{component_prefix}input_text@{component_sufix}.less";
 	@import "../../@{component_prefix}autocomplete/css/@{component_prefix}autocomplete@{component_sufix}.less";
