--- a/lib/dedalo/page/html/page.phtml
+++ b/lib/dedalo/page/html/page.phtml
@@ -13,57 +13,37 @@
 <script>
 var page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSON_PRETTY_PRINT) : json_encode($page_globals) ?>;
 </script>
-<script src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
-<script src="<?php echo DEDALO_LIB_BASE_URL ?>/menu/js/menu.js"></script>
-<script type="module" >
-	/*
-	// launch preload all components files in parallel
-	// import('../common/js/components_list.js')
-	import {page} from "<?php echo DEDALO_LIB_BASE_URL ?>/page/js/page.js"
-	const current_page = new page();
-	current_page.init(<?php echo json_encode($page_options) ?>);
-	current_page.render();
-	*/
+<script defer="defer" src="<?php echo DEDALO_LIB_BASE_URL ?>/common/js/enviroment.js.php"></script>
+<script defer="defer" src="<?php echo DEDALO_LIB_BASE_URL ?>/menu/js/menu.js"></script>
+<script type="module">
+	const t0 = performance.now()
 
 	const main = document.getElementById("main")
 		  main.classList.add("loading")
 
 	// page instance
-	import {event_manager} from '../common/js/event_manager.js'
 	import {get_instance} from '../common/js/instances.js'
-	import {page} from '../page/js/page.js'
 	( async () => {
-		const t0 = performance.now()
 
-		get_instance({
-			model 		: 'page',
-			mode		: <?php echo json_encode($page_options->mode) ?> || 'default',
-			elements 	: <?php echo json_encode($page_options->page_elements) ?>
-		})
-		.then( async (page) => {
-			//console.log("+ Page instantiated in time ms: ",performance.now()-t0)
+		// page instance
+			const page = await get_instance({
+				model 		: 'page',
+				mode		: <?php echo json_encode($page_options->mode) ?> || 'edit',
+				elements 	: <?php echo json_encode($page_options->page_elements) ?>
+			})
+
+		// page instance render
+			await page.build()
 			const wrapper_page = await page.render()
 
-			// main add and restore class
-				main.appendChild(wrapper_page)
-		 		main.classList.remove("loading","hide")
+		// main add and restore class
+			main.appendChild(wrapper_page)
+	 		main.classList.remove("loading","hide")
 
-			//console.log("page:",page);
-			//setTimeout( async (e)=>{
-			//	console.log("heello:");
-			//	await page.refresh()
-			//		console.log("page:",page);
-			//},6000)
-
-			// debug
+		// debug
 			if(SHOW_DEBUG===true) {
 				console.log("+ Page instantiated and rendered total in time ms: ",performance.now()-t0)
 			}
-
-			// event publish generic page
-				event_manager.publish('render_page', wrapper_page)
-		})
-
 	})()
 </script>
 </html>
