--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -337,6 +337,10 @@
 				width: 100%;
 			}
 
+			>.filter {
+				min-height: 28px;
+			}
+
 			>.content_data {
 				display: flex;
 				flex-wrap: wrap;
